# cupula-celestial

./: .dvcignore  .gitignore  .pre-commit-config.yaml  README.md
edge-llm/: Dockerfile.jetson  README.md  pyproject.toml
edge-llm/ota/: README.md
edge-llm/pipeline/: model_loader.py  orchestrator.py  stage1_detector.py  stage2_classifier.py  stage3_vlm.py  telemetry.py
edge-llm/registry/: __init__.py  client.py  signed_registry.py
edge-llm/scripts/: benchmark_latency.py  generate_signing_keys.py  quantize_model.py  sign_model.py
edge-llm/tests/: test_model_loader.py  test_model_loader_expired.py  test_model_loader_valid.py  test_model_loader_wrong_sha256.py  test_pipeline.py  test_pipeline_all_stages.py  test_pipeline_empty_image.py  test_pipeline_large_image.py  test_pipeline_telemetry.py  test_synthetic_data_classes.py  test_synthetic_data_shapes.py
edge-llm/tests/adversarial/: __init__.py  attacks.py  test_robustness.py
edge-llm/training/: augmentation.py  dataset.py  dinov2_classifier.py  lora.py  train_classifier.py
edge-llm/training/synthetic_data/: __init__.py  augmentations.py  generator.py  visualize.py
orquestador/: Cargo.toml  Makefile  README.md  docker-compose.yml  flake.nix
orquestador/.cargo/: deny.toml
orquestador/chaos/: __init__.py  __main__.py  config.yaml  experiments.py  probes.py  report.py  run.sh  runner.py
orquestador/docs/: CHAOS_ENGINEERING.md
orquestador/migrations/: 001_initial_schema.sql  002_tracks_timescale.sql  003_audit_log.sql  004_users_roles.sql  005_session_tokens.sql  006_webauthn_credentials.sql  007_audit_batches.sql
orquestador/mtls/: ca.cnf  generate_mtls_certs.sh  service.cnf.tmpl
orquestador/observability/: prometheus.yml
orquestador/observability/grafana/provisioning/dashboards/: cupula-overview.json  dashboards.yaml
orquestador/redpanda/: README.md  bootstrap.yaml  setup-acls.sh
orquestador/sandbox/: README.md  apparmor-decision-engine.conf  seccomp-decision-engine.json  seccomp-ollama.json
orquestador/scripts/: generate_certs.sh  load_test.py  seed_db.py
orquestador/services/audit-log/: Cargo.toml  Dockerfile
orquestador/services/audit-log/src/: lib.rs  main.rs
orquestador/services/audit-log/src/hsm/: mod.rs  pkcs11.rs  softhsm.rs
orquestador/services/audit-log/src/merkle/: mod.rs
orquestador/services/decision-engine/: Dockerfile  README.md  pyproject.toml
orquestador/services/decision-engine/app/: main.py
orquestador/services/decision-engine/app/api/: __init__.py
orquestador/services/decision-engine/app/llm/: __init__.py
orquestador/services/decision-engine/app/recommender/: __init__.py
orquestador/services/decision-engine/app/wta/: __init__.py
orquestador/services/decision-engine/rag_corpus/: DIH_basics.md  ROE-7_engagement_criteria.md  TTP-FPV_swarm.md  TTP-Shahed_intercept.md
orquestador/services/decision-engine/schemas/: recommendation.schema.json
orquestador/services/decision-engine/tests/: test_recommender.py
orquestador/services/hmi-gateway/: Cargo.toml  Dockerfile
orquestador/services/hmi-gateway/src/: authz.rs  hmac_internal.rs  main.rs  metrics.rs  routes.rs  security_headers.rs  state.rs  tests.rs
orquestador/services/hmi-gateway/src/auth/: mod.rs  sessions.rs  webauthn.rs
orquestador/services/hmi-gateway/src/crypto/: mod.rs  pqc.rs  tls.rs
orquestador/services/hmi-gateway/src/handlers/: auth.rs  engagement.rs  health.rs  mod.rs  webauthn.rs
orquestador/services/hmi-gateway/src/ws/: mod.rs
orquestador/services/policy-engine/: Dockerfile
orquestador/services/policy-engine/data/: geofences.json
orquestador/services/policy-engine/policies/: authorization.rego  geofence.rego  roe.rego
orquestador/services/policy-engine/tests/: authorization_test.rego  geofence_test.rego  roe_test.rego
orquestador/services/sensor-ingest/: Cargo.toml  Dockerfile
orquestador/services/sensor-ingest/src/: main.rs  tests.rs
orquestador/services/sensor-ingest/src/api/: mod.rs
orquestador/services/sensor-ingest/src/auth/: mod.rs
orquestador/services/sensor-ingest/src/kafka/: mod.rs
orquestador/services/sensor-ingest/src/proto/: mod.rs
orquestador/services/swarm-controller/: Cargo.toml  Dockerfile
orquestador/services/swarm-controller/src/: lib.rs  main.rs
orquestador/services/swarm-controller/src/allocator/: mod.rs  rl_allocator.rs
orquestador/services/swarm-controller/src/api/: mod.rs
orquestador/services/swarm-controller/src/auth/: mod.rs
orquestador/services/swarm-controller/src/mavlink_send/: mod.rs
orquestador/services/swarm-controller/tests/: test_api.rs  test_auth.rs  test_dual_auth.rs  test_rl_allocator.rs
orquestador/services/threat-classifier/: Dockerfile  README.md  pyproject.toml
orquestador/services/threat-classifier/app/: main.py
orquestador/services/threat-classifier/app/api/: __init__.py
orquestador/services/threat-classifier/app/inference/: __init__.py
orquestador/services/threat-classifier/models_artifacts/: README.md
orquestador/services/threat-classifier/tests/: test_classifier.py
orquestador/services/track-fusion/: Cargo.toml  Dockerfile
orquestador/services/track-fusion/src/: lib.rs  main.rs  types.rs
orquestador/services/track-fusion/src/fusion/: association.rs  imm.rs  kalman.rs  mod.rs
orquestador/services/track-fusion/tests/: integration_shahed.rs
orquestador/shared/proto/: audit.proto  engagement.proto  sensors.proto  tracks.proto
orquestador/shared/schemas/: recommendation.schema.json  vlm_output.schema.json
orquestador/spire/: Makefile  README.md  agent.conf  docker-compose.yml  server.conf
orquestador/tests/e2e/: test_demo.py
orquestador/tests/integration/: README.md  test_engagement_flow.py  test_kafka_failover.py  test_mtls_handshake.py  test_sensor_to_track.py  test_track_to_recommendation.py
orquestador/tests/security/: README.md  conftest.py  test_account_lockout.py  test_auth_bypass.py  test_hash_chain_tampering.py  test_jwt_tampering.py  test_opa_bypass.py  test_rate_limit.py  test_replay_attack.py  test_sensor_replay.py  test_sql_injection.py  test_swarm_unauth.py
(+222 files in other folders)
