[project]
name = "edge-llm"
version = "0.1.0"
description = "Pipeline edge VLM para dron interceptor de Cúpula Celestial"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.0",
    "pillow>=10.4",
    "onnxruntime>=1.19",
    "structlog>=24.4",
    "jsonschema>=4.23",
    "pydantic>=2.8",
    "pymavlink>=2.4",
    "cryptography>=43.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-cov>=5.0",
    "ruff>=0.6",
]
torch = [
    "torch>=2.4",
    "torchvision>=0.19",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
