[workspace]
resolver = "2"
members = [
    "services/sensor-ingest",
    "services/track-fusion",
    "services/swarm-controller",
    "services/hmi-gateway",
    "services/audit-log",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "EUPL-1.2"
authors = ["Equipo Cúpula Celestial <cupula@defensa.gob.es>"]

[workspace.dependencies]
# Async runtime
tokio = { version = "1.40", features = ["full"] }
tokio-stream = "0.1"
futures = "0.3"
async-trait = "0.1"

# Web / HTTP
axum = { version = "0.7", features = ["ws", "macros"] }
tower = "0.5"
tower-http = { version = "0.5", features = ["cors", "trace", "compression-gzip"] }
hyper = "1.4"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = "3.9"

# Database
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "tls-rustls", "postgres", "uuid", "chrono", "json", "macros"] }

# Kafka
rdkafka = { version = "0.36", features = ["tokio", "cmake-build"] }

# Redis
redis = { version = "0.27", features = ["tokio-comp", "aio"] }

# Math
nalgebra = "0.33"

# Crypto
jsonwebtoken = "9.3"
argon2 = "0.5"
sha2 = "0.10"
hex = "0.4"
rand = "0.8"
hmac = "0.12"
constant_time_eq = "0.3"

# Time / IDs
uuid = { version = "1.10", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Tracing / observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
opentelemetry = "0.24"
opentelemetry_sdk = { version = "0.24", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.17", features = ["grpc-tonic"] }
tracing-opentelemetry = "0.25"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Config / env
dotenvy = "0.15"

# MAVLink
mavlink = { version = "0.13", default-features = false, features = ["std", "tcp", "common", "serde"] }

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
