[package]
name = "audit-log"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
tokio.workspace = true
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
uuid.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
thiserror.workspace = true
anyhow.workspace = true
dotenvy.workspace = true
rdkafka.workspace = true
sqlx.workspace = true
sha2.workspace = true
hex.workspace = true
# FASE 2 — HSM abstracción + SoftHSM Ed25519
ed25519-dalek = { version = "2.1", features = ["rand_core", "pem"] }
rand = "0.8"
# Métricas Prometheus
prometheus = "0.13"
# TLS server (mTLS interno)
axum-server = { version = "0.7", features = ["tls-rustls"] }
rustls = "0.23"
rustls-pemfile = "2.1"

[lib]
name = "audit_log"
path = "src/lib.rs"

[[bin]]
name = "audit-log"
path = "src/main.rs"
