[package]
name = "hmi-gateway"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
tokio.workspace = true
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
uuid.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
thiserror.workspace = true
anyhow.workspace = true
dotenvy.workspace = true
rdkafka.workspace = true
sqlx.workspace = true
jsonwebtoken.workspace = true
argon2.workspace = true
sha2.workspace = true
hex.workspace = true
rand.workspace = true
futures.workspace = true
redis.workspace = true
reqwest.workspace = true
hmac.workspace = true
tower_governor = "0.4"
# FASE 2: webauthn-rs REAL (sustituye stub)
webauthn-rs = { version = "0.5", features = ["danger-allow-state-serialisation"] }
webauthn-rs-proto = "0.5"
url = "2.5"
base64 = "0.22"
# Métricas Prometheus
prometheus = { version = "0.13", features = ["process"] }
# TLS server (mTLS)
axum-server = { version = "0.7", features = ["tls-rustls"] }
rustls = "0.23"
rustls-pemfile = "2.1"
# PQC híbrido (feature-flagged)
pqcrypto-kyber = { version = "0.8", optional = true }
pqcrypto-dilithium = { version = "0.5", optional = true }
pqcrypto-traits = { version = "0.3", optional = true }

[features]
default = []
pqc-hybrid = ["pqcrypto-kyber", "pqcrypto-dilithium", "pqcrypto-traits"]

[dev-dependencies]
tokio = { version = "1.40", features = ["macros", "rt-multi-thread", "test-util"] }
