[package]
name = "swarm-controller"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
tokio.workspace = true
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
uuid.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
thiserror.workspace = true
anyhow.workspace = true
dotenvy.workspace = true
rdkafka.workspace = true
sqlx.workspace = true
nalgebra.workspace = true
mavlink.workspace = true
hmac.workspace = true
sha2.workspace = true
hex.workspace = true
jsonwebtoken.workspace = true
reqwest.workspace = true
http-body-util = "0.1"
rand.workspace = true

[dev-dependencies]
tokio = { version = "1.40", features = ["macros", "rt-multi-thread", "test-util"] }
tower = { version = "0.5", features = ["util"] }
axum = { version = "0.7", features = ["ws", "macros"] }
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"

[lib]
name = "swarm_controller"
path = "src/lib.rs"

[[bin]]
name = "swarm-controller"
path = "src/main.rs"
