[package]
name = "track-fusion"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
tokio.workspace = true
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
uuid.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
thiserror.workspace = true
anyhow.workspace = true
dotenvy.workspace = true
rdkafka.workspace = true
sqlx.workspace = true
nalgebra.workspace = true

[lib]
name = "track_fusion"
path = "src/lib.rs"

[[bin]]
name = "track-fusion"
path = "src/main.rs"
